--- a/frontend/shared/layouts/default.ejs
+++ b/frontend/shared/layouts/default.ejs
@@ -13,6 +13,9 @@
 </head>
 <body class="a-container bg-light">
     
+    <%- include ("../partials/header.ejs")%> <!-- the two "." allows us to jump up two lvls then back down  -->
+    <%- include ("../partials/footer.ejs")%> <!-- the two "." allows us to jump up two lvls then back down  -->
+
     <main class="a-body ">
         <%- body %>
     </main>
